# rust-git_httpsable_cli

./: .appveyor.yml  .travis.yml  Cargo.toml  changelog.md  package-lock.json  readme.md
ci/: before_deploy.ps1  before_deploy.sh
src/: git_httpsable.rs  main.rs
